--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -13,21 +13,13 @@ li {
 
 .main__container {
 	width: 100%;
-
-	/* background-image: url(../images/bg-pattern-intro-desktop.svg); */
-	background: rgb(255, 143, 113);
-	background: linear-gradient(90deg, rgba(255, 143, 113, 1) 0%, rgba(255, 62, 85, 1) 100%);
-		/* background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover; */
-		/* height: 100vh; */
-
 }
-.wrapper {
+.wrapper__hero {
 	/* border: 1px solid aqua; */
 	padding: 64px 165px;
+	background: rgb(255, 143, 113);
+	background: linear-gradient(90deg, rgba(255, 143, 113, 1) 0%, rgba(255, 62, 85, 1) 100%);
 }
-
 .hero {
 	display: flex;
 	flex-direction: column;
@@ -156,4 +148,109 @@ a.login {
 }
 .free, .learn {
 	font-size: 14px;
+}
+/* END HERO AND HEADER */
+
+.wrapper__future {
+	padding: 110px 165px 0 165px;
+}
+.future {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+}
+.future__heading {
+	margin-top: 60px;
+	color: var(--heading-text);
+	font-family: var(--overpass);
+	font-weight: 600;
+}
+.future__body {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+.title {
+	margin-top: 40px;
+}
+.title p {
+	color: var(--heading-text);
+	font-family: var(--overpass);
+	font-weight: 600;
+	font-size: 28px;
+	line-height: 28px;
+}
+.desc p {
+	font-size: 16px;
+	color: #4C5862;
+	letter-spacing: 0.5px;
+	line-height: 28px;
+}
+.col-left, .col-right {
+	width: 50%;
+	margin-top: 60px;
+}
+.col-right {
+	position: relative;
+}
+.col-right img {
+	position: absolute;
+	top: -380px;
+	right: -420px;
+	width: 880px;
+	height: 882px;
+	/* z-index: 20; */
+}
+/* END FUTURE SECTION */
+
+.wrapper__middle {
+	border: 1px dashed magenta;
+	margin-top: 350px;
+	padding: 64px 165px;
+	background: rgb(45, 46, 64);
+	background: linear-gradient(90deg, rgba(45, 46, 64, 1) 0%, rgba(63, 65, 100, 1) 100%);
+	border-bottom-left-radius: 100px;
+	border-top-right-radius: 100px;
+	height: 365px;
+}
+.middle {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+.middle__img {
+	background: url(../images/bg-pattern-circles.svg);
+	position: relative;
+	/* background-position: center center; */
+}
+.middle__img img {
+	position: absolute;
+	width: 472px;
+	height: 500px;
+	top: -160px;
+}
+.middle__desc {
+	color: #fff;
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+}
+.middle__desc .h5 {
+	font-size: 28px;
+	font-family: var(--overpass);
+	font-weight: 600;
+	line-height: 28px;
+}
+.middle__desc .lead {
+	font-family: var(--ubuntu);
+	font-size: 16px;
+	color: #FFFFFF;
+	letter-spacing: 0.5px;
+	line-height: 28px;
+	text-align: left;
+	font-weight: 400;
 }
