--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -4,49 +4,30 @@
 
 body {
 	font-family: var(--ubuntu);
-	font-size: 14px;
+	font-size: 16px;
 }
-li {
-	color: var(--white-text);
-	list-style: none;
-}
-
-.main__container {
-	width: 100%;
-}
-.wrapper__hero {
-	/* border: 1px solid aqua; */
+.wrapper {
 	padding: 64px 165px;
 	background: rgb(255, 143, 113);
 	background: linear-gradient(90deg, rgba(255, 143, 113, 1) 0%, rgba(255, 62, 85, 1) 100%);
 }
-.hero {
+.navbar {
+	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-}
-.hero__header {
-	/* border: 1px dashed palegreen; */
-	display: flex;
-	flex-direction: row;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
-}
-.hero__header-left,
-.hero__header-right {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-}
-.hero__header-nav {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	margin-left: 60px;
-}
-.navbar-brand {
 	padding: 0;
-	margin: 0;
+}
+.navbar-nav {
+	margin-left: 20px;
 }
 .navbar-brand img {
 	height: 35px;
@@ -54,13 +35,36 @@ li {
 }
 .nav-link {
 	color: var(--white-text);
-	font-size: 14px;
+}
+.nav-link:hover,
+.nav-link:active,
+.nav-link:focus {
+	color: var(--white-text);
+	text-decoration: underline;
+}
+.dropdown-menu {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	z-index: 1000;
+	display: none;
+	float: left;
+	min-width: 10rem;
+	padding: 1.5rem 0;
+	margin: 0.125rem 0 0;
+	font-size: 1rem;
+	color: #212529;
+	text-align: left;
+	list-style: none;
+	background-color: #fff;
+	background-clip: padding-box;
+	border: 1px solid rgba(0, 0, 0, .15);
+	border-radius: 0.25rem;
 }
 .dropdown-item {
-	font-family: var(--ubuntu);
 	display: block;
 	width: 100%;
-	padding: 0.6rem 1.5rem;
+	padding: 0.25rem 1.5rem;
 	clear: both;
 	font-weight: 400;
 	color: #212529;
@@ -68,44 +72,55 @@ li {
 	white-space: nowrap;
 	background-color: transparent;
 	border: 0;
+	margin-top: 10px;
 }
-.dropdown a:hover {
-	color: #fff;
-}
-.dropdown a:focus {
-	color: #fff;
-	text-decoration: underline;
-}
-.dropdown-item:focus {
-	color: #16181b;
-	text-decoration: none;
-	background-color: #fff;
+a.dropdown-item:hover {
+	color: #000;
 	font-weight: 500;
+	transition: all .8ms ease-in-out;
 }
-
-.hero__header-login{
-	color: #fff;
-	margin-right: 20px;
-}
-a.login {
-	font-size: 14px;
-}
-.hero__header-signup button {
+/* .navbar-cta {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+} */
+button.btn.header-cta-btn.my-2.my-sm-0 {
 	color: var(--cta-text);
 	border-radius: 28px;
 	background: #fff;
 	padding: 8px 35px;
+}
+button.btn.header-cta-btn.my-2.my-sm-0.login {
+	color: var(--white-text);
+	border-radius: none;
+	background: transparent;
+}
+button.btn.header-cta-btn.my-2.my-sm-0.signup {
+	color: var(--cta-text);
+	border-radius: 28px;
+	padding: 8px 35px;
 	font-size: 14px;
 }
-.hero__header-signup button:hover {
+button.btn.header-cta-btn.my-2.my-sm-0.signup:hover {
 	background: var(--cta-hover);
-	color: #fff;
+		color: #fff;
 }
-/* END HEADER */
+span.navbar-toggler-icon {
+	background-color: transparent;
+}
+.navbar-light .navbar-toggler {
+	color: #fff;
+	border-color: transparent;
+}
+/* .navbar-light .navbar-toggler-icon {
+	background-image: url(data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width=' 2' stroke-linecap=' round' stroke-miterlimit=' 10' d=' M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E);
+} */
+/* END DESKTOP HEADER */
 
 .jumbotron {
 	padding: 8rem 1rem;
-	margin-bottom: 2rem;
+	margin-bottom: -2rem;
 	background-color: transparent;
 	border-radius: 0.3rem;
 	color: #fff;
@@ -114,7 +129,6 @@ a.login {
 	font-weight: 600;
 }
 .lead {
-	/* font-size: 1.25rem; */
 	font-size: 16px;
 	font-weight: 400;
 	padding-top: 1rem;
@@ -131,7 +145,8 @@ a.login {
 .jumbotron__free {
 	margin-right: 20px;
 }
-.jumbotron__free button, .jumbotron__learn button {
+.jumbotron__free button,
+.jumbotron__learn button {
 	border-radius: 28px;
 	padding: 8px 35px;
 }
@@ -146,12 +161,208 @@ a.login {
 	color: var(--cta-text);
 	background-color: #fff;
 }
-.free, .learn {
+.free,
+.learn {
 	font-size: 14px;
 }
-/* END HERO AND HEADER */
+/* END JUMBOTRON */
 
 .wrapper__future {
+	padding: 110px 165px 0 165px;
+}
+.future {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+}
+.future__heading {
+	margin-top: 60px;
+	color: var(--heading-text);
+	font-family: var(--overpass);
+	font-weight: 600;
+}
+.future__body {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+.title {
+	margin-top: 40px;
+}
+.title p {
+	color: var(--heading-text);
+	font-family: var(--overpass);
+	font-weight: 600;
+	font-size: 28px;
+	line-height: 28px;
+}
+.desc p {
+	font-size: 16px;
+	color: #4C5862;
+	letter-spacing: 0.5px;
+	line-height: 28px;
+}
+.col-left,
+.col-right {
+	width: 50%;
+	margin-top: 60px;
+}
+.col-right {
+	position: relative;
+}
+.col-right img {
+	position: absolute;
+	top: -380px;
+	right: -420px;
+	width: 880px;
+	height: 882px;
+}
+/* END FUTURE SECTION */
+
+.wrapper__middle {
+	margin-top: 350px;
+	padding: 64px 165px;
+	background: rgb(45, 46, 64);
+	background: linear-gradient(90deg, rgba(45, 46, 64, 1) 0%, rgba(63, 65, 100, 1) 100%);
+	border-bottom-left-radius: 100px;
+	border-top-right-radius: 100px;
+	height: 355px;
+}
+
+.middle {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.middle__img {
+	background: url(../images/bg-pattern-circles.svg);
+	position: relative;
+}
+
+.middle__img img {
+	position: absolute;
+	width: 472px;
+	height: 500px;
+	top: -200px;
+}
+
+.middle__desc {
+	color: #fff;
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+}
+
+.middle__desc .h5 {
+	font-size: 28px;
+	font-family: var(--overpass);
+	font-weight: 600;
+	line-height: 28px;
+}
+
+.middle__desc .lead {
+	font-family: var(--ubuntu);
+	font-size: 16px;
+	color: #FFFFFF;
+	letter-spacing: 0.5px;
+	line-height: 28px;
+	text-align: left;
+	font-weight: 400;
+}
+/* END MIDDLE SECTION */
+
+.wrapper__second-middle .wrapper {
+	background: transparent;
+}
+ .wrapper__second-middle {
+ 	margin-top: 130px;
+ 	padding: 165px 0 0 165px;
+ }
+ .wrapper__second-middle .wrapper {
+ 	display: flex;
+ 	flex-direction: row;
+ 	align-items: center;
+ 	justify-content: space-between;
+ 	padding-bottom: 80px;
+ 	position: relative;
+ }
+ .wrapper__col-left {
+ 	width: 50%;
+ }
+ .wrapper__col-left img {
+ 	width: 889px;
+ 	height: 730px;
+ 	position: absolute;
+ 	display: inline;
+ 	top: -53px;
+ 	left: -415px;
+ }
+ .wrapper__col-right {
+ 	width: 50%;
+ }
+ /* END SECOND MIDDLE WRAPPER */
+
+.footer {
+	margin-top: 350px;
+	padding: 64px 36px;
+	background: #24242C;
+	/* background: rgb(45, 46, 64);
+	background: linear-gradient(90deg, rgba(45, 46, 64, 1) 0%, rgba(63, 65, 100, 1) 100%); */
+	/* border-bottom-left-radius: 100px; */
+	border-top-right-radius: 100px;
+	height: 355px;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	justify-content: start;
+}
+.footer__logo {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-left: 60px;
+}
+img.logo {
+	width: 100px;
+	height: 40px;
+}
+.footer__col {
+	margin-left: 250px;
+}
+.nav-item .nav-item-header {
+	color: #fff;
+	font-family: var(--overpass);
+	font-weight: 600;
+	margin-bottom: 15px;
+}
+.footer__col .nav {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.nav-item .nav-link {
+	font-family: var(--overpass);
+	opacity: 0.75;
+	font-size: 15px;
+	color: #FFFFFF;
+	letter-spacing: 0;
+	line-height: 10px;
+	margin-top: 8px;
+}
+
+
+
+
+
+/*
+
+
+/* .wrapper__future {
 	padding: 110px 165px 0 165px;
 }
 .future {
@@ -202,19 +413,17 @@ a.login {
 	right: -420px;
 	width: 880px;
 	height: 882px;
-	/* z-index: 20; */
-}
+} */
 /* END FUTURE SECTION */
 
-.wrapper__middle {
-	border: 1px dashed magenta;
+/* .wrapper__middle {
 	margin-top: 350px;
 	padding: 64px 165px;
 	background: rgb(45, 46, 64);
 	background: linear-gradient(90deg, rgba(45, 46, 64, 1) 0%, rgba(63, 65, 100, 1) 100%);
 	border-bottom-left-radius: 100px;
 	border-top-right-radius: 100px;
-	height: 365px;
+	height: 355px;
 }
 .middle {
 	display: flex;
@@ -225,13 +434,12 @@ a.login {
 .middle__img {
 	background: url(../images/bg-pattern-circles.svg);
 	position: relative;
-	/* background-position: center center; */
 }
 .middle__img img {
 	position: absolute;
 	width: 472px;
 	height: 500px;
-	top: -160px;
+	top: -200px;
 }
 .middle__desc {
 	color: #fff;
@@ -253,4 +461,31 @@ a.login {
 	line-height: 28px;
 	text-align: left;
 	font-weight: 400;
+} */
+/* END MIDDLE SECTION */
+/* .wrapper__second-middle {
+	margin-top: 300px;
+	padding: 165px 165px 0 165px;
 }
+.wrapper__second-middle .wrapper {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0;
+	position: relative;
+}
+.wrapper__col-left {
+	width: 50%;
+}
+.wrapper__col-left img {
+	width: 889px;
+	height: 700px;
+	position: absolute;
+	display: inline;
+	top: -130px;
+	left: -415px;
+}
+.wrapper__col-right {
+	width: 50%;
+} */
