--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -1,11 +1,18 @@
 @import "/app/stylesheets/reset.css";
 @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap');
 @import "/app/stylesheets/variables.css";
+@import "/app/stylesheets/helpers.css";
 
+.messege {
+	color: blue;
+	font-weight: bold;
+}
 body {
 	font-family: var(--ubuntu);
 	font-size: 16px;
 }
+
+/* Header & Hero */
 .wrapper {
 	padding: 64px 165px;
 	background: rgb(255, 143, 113);
@@ -79,12 +86,6 @@ a.dropdown-item:hover {
 	font-weight: 500;
 	transition: all .8ms ease-in-out;
 }
-/* .navbar-cta {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-} */
 button.btn.header-cta-btn.my-2.my-sm-0 {
 	color: var(--cta-text);
 	border-radius: 28px;
@@ -104,7 +105,7 @@ button.btn.header-cta-btn.my-2.my-sm-0.signup {
 }
 button.btn.header-cta-btn.my-2.my-sm-0.signup:hover {
 	background: var(--cta-hover);
-		color: #fff;
+	color: #fff;
 }
 span.navbar-toggler-icon {
 	background-color: transparent;
@@ -113,9 +114,97 @@ span.navbar-toggler-icon {
 	color: #fff;
 	border-color: transparent;
 }
-/* .navbar-light .navbar-toggler-icon {
-	background-image: url(data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width=' 2' stroke-linecap=' round' stroke-miterlimit=' 10' d=' M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E);
+.hamburger span {
+	display: block;
+	width: 26px;
+	height: 2px;
+	background-color: #fff;
+	transition: all 300ms ease-in-out;
+	transform-origin: 1px 1px;
+}
+
+
+/* Main Body */
+
+
+/* .open {
+
 } */
+.overlay {
+	display: none;
+	position: fixed;
+	top: 110px;
+	right: 0px;
+	bottom: 0px;
+	left: 0px;
+	background-color: white;
+	background: linear-gradient(#ffffff, transparent);
+	z-index: 100;
+}
+.open .overlay {
+	display: block;
+}
+.open span:first-child {
+	transform: rotate(45deg);
+}
+.open span:nth-child(2) {
+	opacity: 0;
+}
+.open span:last-child {
+	transform: rotate(-45deg);
+}
+.hamburger span:not(:last-child) {
+	margin-bottom: 6px;
+}
+.collapse.show {
+	margin: 0;
+    display: flex;
+	flex-direction: column;
+	align-items: center;
+    background: white;
+	transition: all 300ms ease-in-out;
+
+}
+.collapse.show ul {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 0 auto;
+}
+.collapse.show ul .dropdown .dropdown-toggle {
+	color: var(--heading-text);
+	margin-top: 25px;
+}
+
+/* Mobile menu animations */
+@keyframes fade-in {
+	from {
+		visibility: hidden;
+		opacity: 0;
+	}
+	1% {
+		visibility: visible;
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+@keyframes fade-out {
+	from {
+		visibility: visible;
+		opacity: 1;
+	}
+	99% {
+		visibility: visible;
+		opacity: 0;
+	}
+	to {
+		visibility: hidden;
+		opacity: 0;
+	}
+}
+
 /* END DESKTOP HEADER */
 
 .jumbotron {
